--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
   "devDependencies": {
     "husky": "^7.0.4",
     "lint-staged": "^12.3.8",
-    "prettier": "^2.6.2"
+    "prettier": "2.6.2"
   }
 }
